<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloud_bg"
    tools:context=".LevelsActivity">

    <Button
        android:id="@+id/btnLevelsBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#075DDD"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/Done"
        android:textAlignment="center"
        android:textColor="#FFFB03"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/madeByText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/madeByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/madeBy"
        android:textColor="#323232"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnLevel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:backgroundTint="#075DDD"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/Level1"
        android:textAlignment="center"
        android:textColor="#FFFB03"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLevel2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/btnLevel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="168dp"
        android:backgroundTint="#075DDD"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/Level2"
        android:textAlignment="center"
        android:textColor="#FFFB03"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLevel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#075DDD"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/Level3"
        android:textAlignment="center"
        android:textColor="#FFFB03"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLevelCustom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toEndOf="@+id/btnLevel1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/btnLevelCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:backgroundTint="#075DDD"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/LevelCustom"
        android:textAlignment="center"
        android:textColor="#FFFB03"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toEndOf="@+id/btnLevel2" />
</androidx.constraintlayout.widget.ConstraintLayout>