<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloud_bg"
    android:outlineProvider="none"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#01BC30"
        android:outlineProvider="bounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#A2FF36"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:outlineProvider="none"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/mainTitle"
                android:textAlignment="center"
                android:textColor="#185900"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </FrameLayout>
    </FrameLayout>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#075DDD"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/playGameBtnText"
        android:textAlignment="center"
        android:textColor="#FFFB03"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/madeByText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHighScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#075DDD"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/highScoreBtnText"
        android:textAlignment="center"
        android:textColor="#FFFB03"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/madeByText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/madeByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/madeBy"
        android:textColor="#323232"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>